tests/integration/structs/struct_arg_count_error.june
// error: expected: 2, found: 1

struct Employee {
    name: c_string,
    age: i64,
}

fun main() {
    let employee = new Employee(name: "Bob")
    println(employee.age)
}